--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,11 +2,6 @@
 <resources>
 
     <string name="app_name">Maze</string>
-    <string name="action_settings">Settings</string>
-    <string name="solve">Solve</string>
-    <string name="playAgainBtn">Play Again</string>
-    <string name="youWin">You got the Chip!</string>
-    <string name="congratulations">Congratulations!</string>
     <string name="level_select">Level Select</string>
     <string name="high_scores">High Scores</string>
     <string name="start_game">Start Game</string>
@@ -16,6 +11,6 @@
     <string name="submit_dialog_score_pt1">Score of</string>
     <string name="main_menu">Main Menu</string>
     <string name="options_theme">Themes</string>
-    <string name="maze_directions">Swipe to navigate the maze and get the prize</string>
+    <string name="maze_directions">Swipe to move and get the prize</string>
 
 </resources>
